--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <aside class="sidebar">
     <div class="avatar">
-        <img src="static/img/11.gif" title="保罗酱"/>
+        <img src="static/img/11.gif" title="个人简历"/>
     </div>
     <nav class="nav">
         <a href="#info">资料</a>
