--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="col-l-6">
                     <p>QQ：396961930</p>
-                    <p>博客：<a href="https://www.cnblogs.com/xcsg/">https://www.cnblogs.com/xcsg/</a></p>
+                    <p>博客：<a href="http://vip.lk88c.cn/">http://vip.lk88c.cn/</a></p>
                     <p>邮箱：<a href="mailto:396961930@qq.com">396961930@qq.com</a></p>
 
                 </div>
