--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 <aside class="sidebar">
-    <div class="avatar">
+    <!-- <div class="avatar"> -->
         <img src="static/img/jiang.jpg" title="个人简历"/>
-    </div>
+    <!-- </div> -->
     <nav class="nav">
         <a href="#info">资料</a>
         <a href="#skills">技能</a>
