--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </ul>
                 </div>
                 <div class="col-m-4 center-fixed">
-                    <img src="static/img/hudie.gif"/>
+                    <img src="static/img/timg.gif"/>
                 </div>
             </div>
         </div>
