--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <aside class="sidebar">
     <!-- <div class="avatar"> -->
-        <img src="static/img/jiang.jpg" title="个人简历"/>
+        <img src="static/img/timg.gif" title="个人简历"/>
     <!-- </div> -->
     <nav class="nav">
         <a href="#info">资料</a>
@@ -78,7 +78,7 @@
                     </ul>
                 </div>
                 <div class="col-m-4 center-fixed">
-                    <img src="static/img/timg.gif"/>
+                    <!-- <img src="static/img/timg.gif"/> -->
                 </div>
             </div>
         </div>
