--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
                 <div class="col-l-6">
                     <p>姓名：全硕果</p>
                     <p>性别：男</p>
-                    <p>英文名：Xcsg</p>
                     <p>学历：统招本科</p>
                 </div>
                 <div class="col-l-6">
-                    <p>QQ：396961930</p>
+                    <p>TEL：396961930</p>
                     <p>博客：<a href="http://vip.lk88c.cn/">http://vip.lk88c.cn/</a></p>
                     <p>邮箱：<a href="mailto:396961930@qq.com">396961930@qq.com</a></p>
 
