--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="col-l-6">
                     <p>TEL：396961930</p>
                     <p>博客：<a href="http://vip.lk88c.cn/">http://vip.lk88c.cn/</a></p>
-                    <p>邮箱：<a href="xcsg2012@gmail.com">xcsg2012@gmail.com</a></p>
+                    <p>邮箱：xcsg2012@gmail.com</p>
 
                 </div>
                 <div>&nbsp;</div>
