--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <div class="row">
                 <div class="col-m-8">
                     <ul class="timeline">
-                        <li>2017.5.16 - 2019.5.20：北京旭辉时代软件科技有限公司  <br/>职    位： 全栈开发工程师</li>
-                        <li>2015.8.16 - 2017.5.10：北京信联云通科技有限公司  <br/>职    位： WEB开发工程师</li>
+                        <li>2017.5.16 - 2019.5.28：北京蛙视软件技术有限公司  <br/>职    位： 全栈开发工程师</li>
+                        <li>2015.8.16 - 2017.5.10：北京滚通华业科技有限公司  <br/>职    位： WEB开发工程师</li>
                         
                     </ul>
                 </div>
@@ -89,7 +89,7 @@
                 <div class="col-s-12">
                     <div class="works-item">
                         <ul>
-                            <h2>参与北京旭辉时代科技实时视频监控系统开发</h2>
+                            <h2>参与北京蛙视软件技术有限公司实时视频监控系统开发</h2>
                             <li>  搭建基于Docker挂载Nginx-rtmp的直播服务器</li>
                             <li>  使用FFmpeg利用DVR设备进行推流，对视频进行视频埋点，视频信息分析等操作</li>
                             <li>   开发，测试回放，实时在线监控，历史回放等模块</li>
@@ -126,7 +126,7 @@
                 <div class="col-s-12">
                     <div class="works-item">
                         <ul>
-                            <h2>参与北京信联运通科技跨境移动聚合支付平台研发</h2>
+                            <h2>参与北京滚通华业科技有限公司跨境移动聚合支付平台研发</h2>
                             <li>基于Django实现Restful风格的在线聚合支付接口，聚合封装了支付宝，微信，京东等三方支付平台。</li>
                             <li>使用Mysql存储数据，配置主从热备，使用Celery实现异步邮箱和短信推送。</li>
                             <li>利用Websocket实现后端主动推送，改造前端传统轮询框架，减少了30%的网络请求数，节约了大量的可用带宽。</li>
