--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div>&nbsp;</div>
                 <div class="col-l-12">
-                    <p>自我介绍：本人四年 Python 全栈开发经验，掌握 Django 框架，担任主力工程师参与设计与开发过多个项目，负责系统核心模块的开发，测试与自动化部署，有高并发 WEB 应用架构经验。掌握爬虫技术，熟练使用Scrapy，熟悉前端业务规范，掌握vue.js开发，熟悉响应式开发框架Bootstrap,熟悉 HTTP 协议、掌握websocket，掌握 MySQL,redis 数据库与 Linux 系统的常见机制与原理。有优秀的学习能力和团队沟通能力，经常与团队进行技术分享，能与团队共同成长。</p>
+                    <p>自我介绍：本人四年 Python 全栈开发经验，掌握Python多种框架技术，设计并开发过多个项目，负责系统核心模块的开发，测试与自动化部署。有高并发 WEB 应用架构经验。掌握爬虫技术，熟练使用Scrapy，掌握vue.js开发，熟悉响应式开发框架Bootstrap,熟悉 HTTP 协议、掌握websocket，掌握 MySQL,redis 数据库，具有较强的计算机应用及编程能力。有优秀的学习能力和团队沟通能力，经常与团队进行技术分享，能与团队共同成长。</p>
                 </div>
             </div>
         </div>
@@ -71,8 +71,8 @@
             <div class="row">
                 <div class="col-m-8">
                     <ul class="timeline">
-                        <li>2017.5.16 - 2019.5.28：北京蛙视软件技术有限公司  <br/>职    位： 全栈开发工程师</li>
-                        <li>2015.8.16 - 2017.5.10：北京滚通华业科技有限公司  <br/>职    位： WEB开发工程师</li>
+                        <li>2017.3.6  -   至今	 ：北京蛙视软件技术有限公司  <br/>职    位： 全栈开发工程师</li>
+                        <li>2015.8.16 - 2017.1.12：北京滚通华业科技有限公司  <br/>职    位： WEB开发工程师</li>
                         
                     </ul>
                 </div>
@@ -89,13 +89,37 @@
                 <div class="col-s-12">
                     <div class="works-item">
                         <ul>
-                            <h2>参与北京蛙视软件技术有限公司实时视频监控系统开发</h2>
-                            <li>  搭建基于Docker挂载Nginx-rtmp的直播服务器</li>
-                            <li>  使用FFmpeg利用DVR设备进行推流，对视频进行视频埋点，视频信息分析等操作</li>
-                            <li>   开发，测试回放，实时在线监控，历史回放等模块</li>
-                            <li>  在网页端使用VUE.JS作为载体利用video.js作为直播流播放器，优化延时达500ms左右</li>
-                            <li>  利用Nginx反向代理后台uwsgi+Django的回放接口，并且针对性使用Nginx负载均衡策略</li>
-                            <li>  使用Bootstrap作为播放页响应式设计解决方案，一套代码自适应大小屏应用，降低了45%左右的移动开发成本</li> 
+                            <h2>蛙视视频监控系统</h2>
+                            <li>
+                                <ul>
+                                    <h2>项目描述：</h2>
+                                    <li>蛙视监控是一款实用的智能视频监控软件，支持摄像头实时监控、视频回放、异常警报、设备管理、事件管理、录像计划、日志搜索、系统设置等，还可以配合云台调整摄像头全方位进行详细监控。</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <ul>
+                                    <h2>项目职责：</h2>
+                                    <li>主要负责实时监控、视频回放、设备管理、用户管理模块。</li>
+                                </ul> 
+                            </li>
+                            <li>
+                                <ul>
+                                    <h2>技术要点：</h2>
+                                    <li>  搭建基于Docker挂载Nginx-rtmp的直播服务器</li>
+                                    <li>  使用FFmpeg利用DVR设备进行推流，对视频进行视频埋点，视频信息分析等操作</li>
+                                    <li>   开发，测试回放，实时在线监控，历史回放等模块</li>
+                                    <li>  在网页端使用VUE.JS作为载体利用video.js作为直播流播放器，优化延时达500ms左右</li>
+                                    <li>  利用Nginx反向代理后台uwsgi+Django的回放接口，并且针对性使用Nginx负载均衡策略</li>
+                                    <li>  使用Bootstrap作为播放页响应式设计解决方案，一套代码自适应大小屏应用，降低了45%左右的移动开发成本</li> 
+                                </ul>
+                            </li>
+                            <li>
+                                <ul>
+                                    <h2>项目成果：</h2>
+                                    <li>智慧城市的解决方案该变了政府、企业、园区等和人们相互交往的方式，对各种需求做出快速和智能化响应，从而提高城市系统的智慧水平。智慧城市解决方案2019年第一季度净收入4000万元，比去年同期的2230万元增长81%。</li>
+                                </ul>
+                            </li>
+                            
                         </ul>
                     </div>
                 </div>
