--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                     <li>  开发，测试回放，实时在线监控，历史回放等模块</li>
                                     <li>  在网页端使用VUE.JS作为载体利用video.js作为实时监控流播放器，优化延时达500ms左右</li> 
                                     <li>  利用Nginx反向代理后台uwsgi+Django的回放接口，并且针对性使用Nginx负载均衡策略</li>
-                                    <li>  6.使用Bootstrap作为播放页响应式设计解决方案，一套代码自适应大小屏应用，降低了45%左右的移动开发成本</li>
+                                    <li>  使用Bootstrap作为播放页响应式设计解决方案，一套代码自适应大小屏应用，降低了45%左右的移动开发成本。</li>
                                 </ul>
                             </li> 
                         </ul>
