--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-l-6">
                     <p>TEL：16637712137</p>
-                    <p>博客：<a href="http://www.lk88c.cn/">http://www.lk88c.cn/</a></p>
+                    <p>博客：<a href="http://www.u9q.cn/">http://www.u9q.cn/</a></p>
                     <p>邮箱：xcsg2012@gmail.com</p>
 
                 </div>
