--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <div class="row">
                 <div class="col-s-6 col-m-6">
                     <ul>
-                        <li>电脑硬件：了解各种硬件工作原理及日常故障处理、系统镜像的制作</li>
+                        <li>电脑硬件：了解各种硬件工作原理及日常故障处理、系统镜像的制作、测试软件的编写</li>
                         <li>前端：Vue、Node.js、Bootstrap、Echarts</li>
-                        <li>后端：Python、Go、Django、mysql、mongo、linux、mac os</li>
+                        <li>后端：Python、Go、Django、linux、mac os、centos</li>
                         <li>数据库：MySQL、MongoDB、Redis</li>
                     </ul>
                 </div>
