--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                             <h3>2022 年 1 月-至今 在深圳华创荣耀科技任电脑技术员
                             </h3>
                                     <li>  负责新品电脑 Diy 整机的稳定测试及评估</li>
-                                    <li>  对显卡进行测试（如花屏，闪屏，黑屏进行标注及跟更换）
+                                    <li>  来料显卡进行测试评估（如花屏，闪屏，黑屏）
                                     </li>
-                                    <li>  远程处理客户电脑疑难问题及系统镜像的制作</li> 
+                                    <li>  远程处理客户电脑疑难问题及系统镜像的制作、测试软件的编写</li> 
                         </ul>
                     </div>
                 </div>
